[gd_scene load_steps=11 format=3 uid="uid://xr7pnu75psop"]

[ext_resource type="Theme" uid="uid://cuapcy8mkua4w" path="res://scenes/seasons_hud.tres" id="1_kg2o1"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_nspe3"]
[ext_resource type="AudioStream" uid="uid://dcv5pg3wn2ikx" path="res://assets/music/Danosongs-Mars-And-Stars-edited.mp3" id="3_5ttiw"]
[ext_resource type="PackedScene" uid="uid://tduu13dfobtp" path="res://scenes/hotkey_rebind_button.tscn" id="3_qfror"]
[ext_resource type="PackedScene" uid="uid://hcrgcgf2s5le" path="res://scenes/window_mode_button.tscn" id="4_0ymo3"]
[ext_resource type="AudioStream" uid="uid://c5050h6ego0vk" path="res://assets/music/fx/jump.wav" id="4_hg6ka"]
[ext_resource type="PackedScene" uid="uid://dtyirierf8lui" path="res://scenes/audio_slider_settings.tscn" id="4_j76bc"]
[ext_resource type="PackedScene" uid="uid://briiilyjvthmw" path="res://scenes/resolution_mode_button.tscn" id="5_okl7v"]

[sub_resource type="InputEventAction" id="InputEventAction_3o33f"]
action = &"pause"

[sub_resource type="Shortcut" id="Shortcut_8xvf0"]
events = [SubResource("InputEventAction_3o33f")]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_nspe3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="GameMenu" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(500, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -217.5
offset_right = 250.0
offset_bottom = 217.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("1_kg2o1")

[node name="VBoxContainer" type="VBoxContainer" parent="GameMenu"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ResumeButton" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
shortcut = SubResource("Shortcut_8xvf0")
shortcut_in_tooltip = false
text = "	VOLTAR AO JOGO"

[node name="OptionsButton" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CONFIGURACOES"

[node name="MenuButton" type="Button" parent="GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "SAIR PARA MENU"

[node name="OptionsMenu" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(500, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -275.0
offset_right = 253.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kg2o1")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SoundButton" type="Button" parent="OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_kg2o1")
text = "MUSICA E SOM"

[node name="VideoButton" type="Button" parent="OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_kg2o1")
text = "VIDEO"

[node name="ControlsButton" type="Button" parent="OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("1_kg2o1")
text = "CONTROLES"

[node name="ExitOptionsButton" type="Button" parent="OptionsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "VOLTAR"

[node name="SoundMenu" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(800, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -285.0
offset_right = 400.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kg2o1")

[node name="VBoxContainer" type="VBoxContainer" parent="SoundMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioSliderSettings" parent="SoundMenu/VBoxContainer" instance=ExtResource("4_j76bc")]
layout_mode = 2

[node name="AudioSliderSettings2" parent="SoundMenu/VBoxContainer" instance=ExtResource("4_j76bc")]
layout_mode = 2
bus_name = "Music"

[node name="AudioSliderSettings3" parent="SoundMenu/VBoxContainer" instance=ExtResource("4_j76bc")]
layout_mode = 2
bus_name = "SFX"

[node name="HBoxContainer" type="HBoxContainer" parent="SoundMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExitSoundButton" type="Button" parent="SoundMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "VOLTAR"

[node name="VideoMenu" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(800, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -285.0
offset_right = 400.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kg2o1")

[node name="VBoxContainer" type="VBoxContainer" parent="VideoMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="WindowModeButton" parent="VideoMenu/VBoxContainer" instance=ExtResource("4_0ymo3")]
layout_mode = 2

[node name="ResolutionModeButton" parent="VideoMenu/VBoxContainer" instance=ExtResource("5_okl7v")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VideoMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExitVideoButton" type="Button" parent="VideoMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "VOLTAR"

[node name="ControlsMenu" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(800, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -275.0
offset_right = 253.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_kg2o1")

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="ControlsMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme = ExtResource("1_kg2o1")
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMenu/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HotkeyRebindButton" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "move_left"

[node name="HotkeyRebindButton2" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "move_right"

[node name="HotkeyRebindButton3" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "move_up"

[node name="HotkeyRebindButton4" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "move_down"

[node name="HotkeyRebindButton5" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "jump"

[node name="HotkeyRebindButton6" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "cast"

[node name="HotkeyRebindButton7" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "interact"

[node name="HotkeyRebindButton8" parent="ControlsMenu/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource("3_qfror")]
layout_mode = 2
action_name = "pause"

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ExitControlsButton" type="Button" parent="ControlsMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
text = "VOLTAR"

[node name="AudioManager" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource("3_5ttiw")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="Pressing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_hg6ka")
volume_db = -2.0
bus = &"SFX"

[connection signal="pressed" from="GameMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="GameMenu/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/VideoButton" to="." method="_on_video_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="OptionsMenu/VBoxContainer/ExitOptionsButton" to="." method="_on_exit_options_button_pressed"]
[connection signal="pressed" from="SoundMenu/VBoxContainer/HBoxContainer/ExitSoundButton" to="." method="_on_exit_sound_button_pressed"]
[connection signal="pressed" from="VideoMenu/VBoxContainer/HBoxContainer/ExitVideoButton" to="." method="_on_exit_video_button_pressed"]
[connection signal="pressed" from="ControlsMenu/VBoxContainer/HBoxContainer/ExitControlsButton" to="." method="_on_exit_controls_button_pressed"]
